<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
  <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
      >  
   <Button
       android:layout_width="90dp"
       android:layout_height="55dp"
       android:id="@+id/back"
       android:text="@string/back"
       /> 
    <Button
       android:layout_width="90dip" 
       android:layout_height="55dip"
       android:id="@+id/edit"
       android:layout_marginLeft="30dip"
       android:text="@string/edit"
      />

    <Button
        android:id="@+id/delete"
        android:layout_width="90dip"
        android:layout_height="55dip"
        android:text="@string/delete"
        
         />
  
</LinearLayout>
     <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            />
       
    </ScrollView>
    
      <TextView
            android:id="@+id/soundRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_attachment_audio"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/play_sound"
            android:gravity="center"
            android:visibility="gone"
           />

        <ImageView
            android:id="@+id/picture"
            android:layout_width="150dip"
            android:layout_height="150dip"
            android:scaleType="fitCenter"
            />
     
  
</LinearLayout>